--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ body {
 .section1{
     width: 100%;
     height: 200px;
+    overflow: hidden;
     border: 4px dashed #ccc;
     margin-top: 50px;
     box-sizing: border-box;
